finally fixed layout issues

--- a/style/style.css
+++ b/style/style.css
@@ -1,30 +1,3 @@
-circle {
-	fill: #ccc;
-	stroke: #333;
-	stroke-width: 1.5px;
-}
-
-text {
-	font: 18px sans-serif;
-	font-weight: bold;
-	pointer-events: none;
-}
-
-.link {
-	fill: none;
-	stroke: #666;
-	stroke-width: 2px;
-}
-
-.link.hbond {
-	stroke: #0074D9;
-	stroke-width: 4px;
-}
-
-.link.phosphodiester {
-	stroke: black;
-}
-
 .textbox {
 	padding: 1px 20px;
 	border: 0;
@@ -82,4 +55,14 @@ body {
   position: absolute; 
   left: 30%;
   top: 0;
+}
+
+.node {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+.link {
+  stroke: #999;
+  stroke-opacity: .6;
 }
